k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team20-y-frontend-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  type: ClusterIP
  selector:
    app: team20-y-frontend
  ports:
    - port: 80
      targetPort: 80
